prod-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod
  namespace: prod
  labels:
    app: prod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: prod
          image: nginx:latest
          ports:
            - containerPort: 80
