demo-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-demo
  namespace: default
spec:
  selector:
    app: demo-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
