k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstdemoproject-service
  labels:
    app: firstdemoproject
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: firstdemoproject
