prod-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod
  namespace: prod
spec:
  selector:
    app: prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
