demo-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-demo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dmeoko.demoko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-demo
                port:
                  number: 80
