k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firstdemoproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: firstdemoproject.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firstdemoproject-service
            port:
              number: 80
