prod-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prod.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod
                port:
                  number: 80
